final del projecto

--- a/index.html
+++ b/index.html
@@ -1,83 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-	<title>Recetas Gostosas</title>
+	<title>Receitas Gostosas</title>
 </head>
-<body style="background-color: whitesmoke;">
-<h1>Bolo Red Velvet</h1>
-<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Tarta-Red-Velvet-americana.-Receta-paso-a-paso.jpg" alt="bolo red velvet">
-<h2>Acceso Rapido</h2>
-<ul>
+<body style="background-color: whitesmoke;" >
+<h1 >Bolo Red Velvet</h1>
+<img  style="border-radius: 2%; box-shadow: 5px 6px 8px grey" align="center" src="img/Tarta-Red-Velvet-americana.-Receta-paso-a-paso.jpg" alt="bolo red velvet">
+<h2 >Acceso Rapido</h2>
+<ul >
 	<li><a href="#red-velvet">O Melhor Bolo De Todos</a></li>
 	<li><a href="#ingredientes">Ingredientes</a></li>
-	<li><a href="#preraração">Preparacion</a></li>
+	<li><a href="#preparação">Preparação</a></li>
 	<li><a href="#video">Video Tutorial</a></li>
 </ul>
-<h2 id="red-velvet">O Melhor Bolo De Todos</h2>
+<h2 id="red-velvet" >O Melhor Bolo De Todos</h2>
 <p>Aprenda a preparar o famoso bolo Red Velvet, que passa a ser traduzido como veludo vermelho e cujo nome é motivado pela aparência do bolo de esponja que é feito. É um pão de ló úmido e suculento, com um leve toque azedo que é maravilhoso e a cobertura de queijo doce é o que torna a combinação autêntica ... escândalo!
 
 Na receita, estou ensinando todos os truques para obter a melhor textura, a melhor cor, o que é necessário para cortar os bolos, como preenchê-los e qualquer detalhe, para que seja muito fácil preparar esse bolo em casa, pois é ótimo para celebrações e ocasiões especial e seu sabor não deixa ninguém indiferente.</p>
 
 
-<h3 id="ingredientes">Ingredientes</h3>
- <h4>Para O Bolo</h4>
-	<ul>
-		<li>130 gr de mantequilla sin sal.</li>
-		<li>270 gr de azúcar blanco.</li>
-		<li>2 huevos M.</li>
-		<li>300 gr de harina de trigo.</li>
-		<li>1 cucharada sopera de cacao puro en polvo.</li>
-		<li>1 cucharadita de postre de bicarbonato.</li>
-		<li><strong>Buttermilk:</strong> 230 gr de leche entera y 1 cucharada sopera de zumo de limón.</li>
-		<li>1 cucharadita de postre de colorante en gel rojo.</li>
-		<li>1 cucharadita de postre de vinagre de vino blanco.</li>
-		<li>1 cucharadita de esencia de vainilla o aroma de vainilla.</li>
+<h3 id="ingredientes" >Ingredientes</h3>
+ <h4 >Para O Bolo</h4>
+	<ul >
+		<li>130 gr de manteiga sem sal.</li>
+		<li>270 gr de açúcar branco.</li>
+		<li>2 ovos.</li>
+		<li>300 gr de farinha de trigo.</li>
+		<li>1 colher de sopa de cacau em pó puro.</li>
+		<li>1 colher de chá de bicarbonato de sódio..</li>
+		<li><strong>Buttermilk:</strong> 230 gr de leite integral e 1 colher de sopa de suco de limão.</li>
+		<li>1 colher de chá de corante alimentar vermelho em gel.</li>
+		<li>1 colher de chá de sobremesa de vinagre de vinho branco.</li>
+		<li>1 colher de chá de essência de baunilha ou sabor de baunilha.</li>
 	</ul>
- <h4>Para A Creme</h4>
- <ul>
- 	<li>150 gr de mantequilla sin sal.</li>
- 	<li>200 gr de azúcar glas.</li>
- 	<li>600 gr de queso crema.</li>
+ <h4 >Para a cobertura de queijo:</h4>
+ <ul >
+ 	<li>150 gr de manteiga sem sal.</li>
+ 	<li>200 gr de açúcar de confeiteiro.</li>
+ 	<li>600 gr de queijo creme.</li>
 
  </ul>
 
 
-<h3 id="preraração">Preparacion</h3>
-<ol>
-	<li>Como necesitamos que la mantequilla esté cremosa o lo que se conoce como pomada, sácala de la nevera al menos una hora o dos antes. Si te no te has acordado de hacerlo tiene solución ya que puedes cortarla en cubitos y así con media hora suele ser suficiente o, si tienes más prisa aún, introduce el recipiente en el microondas durante unos segundos hasta que veas que ya no está tan sólida pero que en ningún momento llegue a derretirse.</li>
-	<li>Para preparar el buttermilk pon la leche en un recipiente o vaso y añade el zumo de limón. Remueve un poco con una cuchara y deja que repose unos 10 minutos para que la leche se corte ya que es el resultado que buscamos. Es así de sencillo de elaborar en casa y va genial para la textura y sabor de recetas de repostería como ésta.</li>
-	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Buttermilk-casero.jpg" alt="algo">
-	<li>Pon un colador encima de un bol y echa encima la harina, el bicarbonato y el cacao puro en polvo y hazlos pasar a través de él sujetándolo con una mano y golpeándolo suavemente con la otra. A este proceso se le llama tamizar y sirve para que caigan sin grumos ni apelmazamientos. Mézclalo toco un poco con una cuchara.</li>
-	<li>Pon en otro bol (amplio, será en el que finalmente lo juntaremos todo) la mantequilla con el azúcar y bátelos hasta conseguir una mezcla homogénea y esponjosa. Puedes batir con un robot, con unas varillas manuales o con unas varillas eléctricas como he hecho yo.</li>
-	<li>Casca un huevo, incorpóralo al bol en el que están la mantequilla con el azúcar y bate hasta que se integre bien. Haz lo mismo con el otro huevo.</li>
-	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Ingredientes-tarta-Red-Velvet.jpg" alt="">
-	<li>Echa en el recipiente del buttermilk el resto de ingredientes líquidos: el colorante rojo, el vinagre y la vainilla. Mezcla bien con ayuda de una cuchara.
+<h3 id="preparação" >Preparação</h3>
+<ol >
+	<li>Como precisamos que a manteiga seja cremosa ou chamada de pomada, retire-a da geladeira pelo menos uma ou duas horas antes. Se você não se lembrou de fazê-lo, ele tem uma solução, pois você pode cortá-lo em cubos e, assim, meia hora é o suficiente ou, se você estiver com pressa, coloque o recipiente no microondas por alguns segundos até ver que ele não é mais tão sólido. mas que em nenhum momento derrete.</li>
+	<li>Para preparar o buttermilk (leitelho), coloque o leite em um recipiente ou copo e adicione o suco de limão. Mexa um pouco com uma colher e deixe descansar por cerca de 10 minutos, para que o leite seja cortado, pois é o resultado que estamos procurando. É simples de fazer em casa e é ótimo para a textura e o sabor de receitas de panificação como esta.</li>
+	<img  style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Buttermilk-casero.jpg" alt="algo">
+	<li>Coloque um filtro em cima de uma tigela e despeje a farinha, o bicarbonato de sódio e o cacau em pó puro e passe-os segurando-o com uma mão e batendo suavemente com a outra. Esse processo é chamado peneirar e é usado para fazê-los cair sem caroços ou bolos. Misture e toque um pouco com uma colher.</li>
+	<li>Coloque em outra tigela (larga, será a onde finalmente colocaremos tudo junto) a manteiga com o açúcar e bata até obter uma mistura homogênea e macia. Você pode vencer com um robô, com hastes manuais ou elétricas, como eu fiz.</li>
+	<li>Quebre um ovo, adicione-o à tigela em que estão a manteiga e o açúcar e bata até ficar bem integrado. Faça o mesmo para o outro ovo.</li>
+	<img  style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Ingredientes-tarta-Red-Velvet.jpg" alt="">
+	<li>Despeje o restante dos ingredientes líquidos na tigela do soro de leite coalhado: o corante vermelho, o vinagre e a baunilha. Misture bem com a ajuda de uma colher.
 	</li>
 	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Colorante-rojo-para-red-velvet-y-buttermilk.jpg" alt="">
-	<li>En el bol de la mantequilla y el azúcar echa aproximadamente la mitad de los ingredientes secos y todos los líquidos y mezcla bien pero sin batir para mantener la esponjosidad de la mezcla. Simplemente puedes utilizar unas varillas manuales y mezclarlo todo haciendo círculos.
+	<li>Na tigela de manteiga e açúcar, despeje cerca da metade dos ingredientes secos e de todos os líquidos e misture bem, mas sem bater, para manter a leveza da mistura. Você pode simplesmente usar hastes manuais e misturar tudo em círculos.
 	</li>
-	<li>Finalmente añade el resto de los ingredientes secos y mezcla hasta que el aspecto sea homogéneo.</li>
-	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Masa-para-tarta-Red-Velvet.jpg" alt="">
-	<li>Precalienta el horno a 170ºC con calor arriba y abajo, sin aire ni ventilador.
+	<li>Por fim, adicione o restante dos ingredientes secos e misture até o aspecto ficar homogêneo.</li>
+	<img  style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Masa-para-tarta-Red-Velvet.jpg" alt="">
+	<li>Pré-aqueça o forno a 170ºC com calor para cima e para baixo, sem ar ou ventilador.
 	</li>
-	<li>Abre cada uno de los dos moldes, pon sobre cada base papel de horno y ciérralos de nuevo, esto facilitará el desmoldado después. También me gusta untar los laterales con un poco de mantequilla, suelo hacerlo con mis propios dedos o con un pincel de cocina.</li>
-	<li>Reparte la masa en los dos moldes y cuando el horno haya llegado a la temperatura, introduce los moldes sobre una rejilla en el horno a altura media y deja que se horneen unos 25-30 minutos. Cuando llevan unos 25 minutos suelo hacer la prueba del palillo que consiste en introducir un palillo en el bizcocho, y si sale limpio es que está listo, pero si no es así lo dejo unos minutos más. En este caso es posible que salga con un poco de color rojo, pero con «limpio» me refiero a que no salga con masa pegada, señal de que le falta un poco de horneado.</li>
+	<li>Abra cada um dos dois moldes, coloque papel manteiga em cada base e feche-os novamente, para facilitar a remoção do molde posteriormente. Também gosto de espalhar as laterais com um pouco de manteiga, costumo fazê-lo com meus próprios dedos ou com uma escova de cozinha.</li>
+	<li>Distribua a massa nos dois moldes e, quando o forno atingir a temperatura, coloque-os em uma gradinha no forno a uma altura média e deixe cozer por 25 a 30 minutos. Quando eles demoram cerca de 25 minutos, geralmente faço o teste do palito, que consiste em inserir um palito no bolo e, se sair limpo, está pronto, mas, se não, deixo por mais alguns minutos. Nesse caso, é possível que saia com um pouco de cor vermelha, mas com "limpo", quero dizer que não sai com massa colada, um sinal de que está faltando um pouco de cozimento.</li>
 	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Bizcochos-para-tarta-Red-Velvet.jpg" alt="">
-	<li>Coloca los moldes sobre una rejilla para que se enfríen un poco durante 10 minutos y a continuación desmolda los bizcochos con cuidado y envuélvelos por separado con papel film para retener la humedad y que queden muy jugosos.</li>
-	<li>Yo lo que hago para que queden lo más lisos posibles es colocarlos boca abajo, de forma que la parte superior que suele quedar más abultada se alise.</li>
-	<li>Mételos al momento en la nevera y déjalos reposar un mínimo de 4 horas aunque a mi me gusta prepararlos el día anterior.</li>
-	<li>Para preparar la cobertura recuerda que también necesitamos la mantequilla cremosa así que sácala de la nevera con antelación o haz el truco del microondas.</li>
-	<li>Pon la mantequilla en un bol junto con el azúcar glas y mezcla bien, ya sea con un robot amasador (como he utilizado yo) o bien unas varillas manuales o eléctricas.</li>
-	<li>Después incorpora el queso crema (hazlo en 3 tandas, echando 200 gr, mezclando y a continuación los siguientes) y mezcla bien hasta que el resultado sea homogéneo y esponjoso, sin grumos de queso.</li>
+	<li>Coloque os moldes em uma gradinha para esfriar um pouco por 10 minutos; em seguida, remova cuidadosamente os biscoitos e envolva-os separadamente com filme plástico para reter a umidade e torná-los muito suculentos.</li>
+	<li>O que faço para torná-las o mais suaves possível é colocá-las de cabeça para baixo, para que a parte superior, geralmente mais volumosa, seja suavizada.</li>
+	<li>Coloque-os na geladeira imediatamente e deixe descansar por um período mínimo de 4 horas, embora eu goste de prepará-los no dia anterior.</li>
+	<li>Para preparar a cobertura, lembre-se de que também precisamos da manteiga cremosa; portanto, retire-a da geladeira com antecedência ou faça o truque de microondas.</li>
+	<li>Coloque a manteiga em uma tigela junto com o açúcar de confeiteiro e misture bem, com um robô amassador (como já usei) ou com palitos manuais ou elétricos.</li>
+	<li>Em seguida, adicione o cream cheese (faça-o em 3 lotes, despeje 200 gr, misture e faça o seguinte) e misture bem até o resultado ficar macio e macio, sem pedaços de queijo.</li>
 	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Cobertura-de-queso-para-tarta-red-velvet.jpg" alt="">
-	<li>Saca los bizcochos de la nevera y córtalos por la mitad. También podrías dejarlos tal cual y tener una tarta con solo 2 capas pero visualmente es mejor 4 y además al mezclarse más con la cobertura la combinación es fantástica.</li>
-	<li>Para cortar los bizcochos el utensilio más conveniente es una lira como la que estoy utilizando yo, pero también podéis usar un cuchillo largo e incluso tipo jamonero, y hay quien los corta con un hilo bien tensado.</li>
-	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Como-cortar-bizcochos-con-lira.jpg" alt="">
-	<li>Para rellenarlos voy colocando los bizcochos tal cual, es decir, primero la parte de abajo de uno, unto con cobertura y coloco encima la parte de arriba de ese mismo bizcocho y sigo. Para extender la cobertura lo ideal es utilizar una espátula aunque una lengua de cocina o similar también os puede servir.</li>
-	<li>Hay que untar las 3 capas intermedias y cuando esté todo el bizcocho montado, hacer una capa final por fuera. Mi recomendación es que para las capas intermedias uses la mitad de la cobertura y reserves la otra mitad para fuera, aunque realmente depende de la decoración que quieras hacer. Yo la he dejado al modo «rústico», simplemente cubriéndola pero sin perfeccionar bordes y demás y dejando que se aprecien un poco los bizcochos por fuera. También puedes utilizar una manga pastelera para ir cubriendo las capas internas y también la externa.</li>
-	<img style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Como-hacer-tarta-Red-Velvet.jpg" alt="">
+	<li>Retire os biscoitos da geladeira e corte-os ao meio. Você também pode deixá-los como estão e ter um bolo com apenas 2 camadas, mas visualmente é melhor 4 e também ao misturar mais com a cobertura, a combinação é fantástica.</li>
+	<li>Para cortar os biscoitos, o utensílio mais conveniente é uma lira como a que estou usando, mas você também pode usar uma faca longa e até um tipo de presunto, e algumas pessoas os cortam com um fio bem esticado.</li>
+	<img  style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Como-cortar-bizcochos-con-lira.jpg" alt="">
+	<li>Para preenchê-los, coloco os biscoitos como estão, ou seja, primeiro o fundo de um, juntamente com a cobertura, coloco o topo do mesmo bolo por cima e continuo. Para estender a cobertura, o ideal é usar uma espátula, embora uma língua de cozinha ou similar também possa atendê-lo.</li>
+	<li>Você tem que manchar as 3 camadas intermediárias e quando todo o bolo estiver montado, faça uma camada final do lado de fora. Minha recomendação é que, para as camadas intermediárias, use metade da cobertura e reserve a outra metade para o exterior, embora isso realmente dependa da decoração que você deseja fazer. Eu o deixei no modo "rústico", simplesmente cobrindo-o, mas sem aperfeiçoar as bordas e assim por diante, deixando os biscoitos para apreciar um pouco do lado de fora. Você também pode usar um saco de confeitar para cobrir as camadas interna e externa.</li>
+	<img  style="border-radius: 2%; box-shadow: 5px 6px 8px grey" src="img/Como-hacer-tarta-Red-Velvet.jpg" alt="">
 </ol>
-<h2>Tarta Red Velvet americana. Receta paso a paso</h2>
-<video id="video" src="img/Red Velvet.mp4"></video>
+<h2 >Bolo Red Velvet americana. Receita passo a passo</h2>
+<video  id="video" src="img/Red Velvet.mp4" width="600" height="400" controls></video>
 </body>
 </html>
